--- a/scss/_anchors.scss
+++ b/scss/_anchors.scss
@@ -1,14 +1,11 @@
 @charset "UTF-8";
-
 a,
 .anchor {
-    @include anchor-hover();
-    cursor: pointer;
-    padding: {
-        left: 2px;
-        right: 2px;
-        bottom: 2px;
-    }
-    color: $fontLight;
     text-decoration: none;
+    color: $fontLight;
+    transition: $anchorTransitionTimeAndEasingOut;
+    &:hover {
+        transition: $anchorTransitionTimeAndEasingIn;
+        color: $turquoiseDark;
+    }
 }
