--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -12,36 +12,13 @@ html {
     position: relative;
     font: {
         size: 106.25%;
-        family: $fontFamilyText;
+        family: 'Lato', sans-serif;
     }
     color: $fontLight;
-    line-height: 1.4;
-}
-
-.keymessage {
-    .section-green & {
-        color: $fontLight;
-    }
-    max-width: 75%;
-    margin: {
-        top: 0;
-        bottom: $spaceSmall;
-    }
-    color: $turquoiseDark;
-    font: {
-        size: $fontSizeXLarge;
-        weight: 1000;
-        family: $fontFamilyIntros;
-    }
-}
-
-.intro {
-    margin: 0;
 }
 
 section {
-    color: $fontDark;
-    background: $bgColorLight;
+    background-color: $bgColorLight;
     padding-bottom: $spaceNormal;
     @include breakpoint(medium) {
         padding-bottom: $spaceLarge;
@@ -49,12 +26,8 @@ section {
     @include breakpoint(large) {
         padding-bottom: $spaceLarge*1.5;
     }
-    &.section-green {
-        background: $turquoiseDark;
-        color: $fontLight;
-    }
     &.section-dark {
-        background: $bgColorDark;
+        background-color: $bgColorDark;
     }
     &:last-child {
         padding-bottom: 0;
@@ -67,23 +40,19 @@ section {
             padding-top: $spaceLarge;
         }
         @include breakpoint(large) {
-            padding-bottom: $spaceLarge;
-            padding-top: $spaceLarge;
+            padding-bottom: $spaceLarge*1.5;
+            padding-top: $spaceLarge*1.5;
         }
     }
 }
 
 .main-wrapper {
-    width: 100%;
-    max-width: 1920px;
+    max-width: 1060px;
     margin: 0 auto;
-    position: relative;
+
 }
 
 .inner-wrapper {
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
     padding: 0 $spaceXSmall;
     @include breakpoint(medium) {
         padding: 0 $spaceSmall;
@@ -91,13 +60,23 @@ section {
     @include breakpoint(large) {
         padding: 0 $spaceNormal;
     }
+
+}
+
+.particles-js {
+    z-index: z-index($z-index, particleJS);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 blockquote {
     margin: {
         top: 0;
         right: 0;
-        bottom: 0;
+        bottom: $spaceXSmall;
         left: 0;
     }
     font: {
@@ -106,15 +85,23 @@ blockquote {
     }
     &::before,
     &::after {
-        line-height: 1;
-        font-size: $fontSizeLarge;
-        color: $turquoiseDark;
+        font-size: $fontSizeXLarge;
+        color: $orange;
     }
     &::after {
         content: "\"";
     }
     &::before {
         content: "\"";
+    }
+}
+
+.author {
+    display: inline-block;
+    margin-bottom: $spaceSmall;
+    &::before {
+        content: "\2014\00a0";
+        color: $orange;
     }
 }
 
