--- a/scss/_main-menu.scss
+++ b/scss/_main-menu.scss
@@ -1,25 +1,45 @@
 @charset "UTF-8";
 
 .main-menu {
-    z-index: 11111;
-    position: absolute;
+    background: {
+        color: rgba($bgColorDark, 1);
+    }
+    @include breakpoint(large) {
+        background: {
+            color: rgba($bgColorDark, 0.5);
+        }
+    }
+    z-index: 1000;
+    position: fixed;
     top: 0;
-    left: 0;
     right: 0;
-    width: 100%;
-    height: 85px;
-    background-color: rgba($bgColorDark, 0.6);
+    left: 0;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     ul {
-        @include reset-list;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        li {
+        display: inline-flex;
+        list-style: none;
+        padding: {
+            top: rem-calc(25);
+            right: rem-calc(25);
+            bottom: rem-calc(25);
+            left: rem-calc(25);
+        }
+        margin: 0;
+        @include breakpoint(large) {
             margin: {
-                right: $spaceSmall;
+                top: 0;
+                left: auto;
+                bottom: 0;
+                right: 0;
+            }
+        }
+        li {
+            font: {
+                size: $fontSizeLarge;
+            }
+            margin: {
+                right: 15px;
             }
             &:last-child {
                 margin: {
