--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,21 +1,17 @@
 @charset "UTF-8";
 
-@import "fonts";
 @import "settings";
 @import "../node_modules/foundation-sites/scss/foundation";
-@import "../node_modules/swiper/css/swiper.min.css";
+@import "lightgallery";
 @import "mixins";
-@import "../fonts/style.css";
 @import "headlines";
 @import "layout";
-@import "buttons";
 @import "anchors";
-@import "homepage-header";
 @import "header";
+@import "about";
+@import "contact";
+@import "listen";
 @import "footer";
+@import "modal";
+@import "horizontal-teaser";
 @import "main-menu";
-@import "pillars";
-@import "testimonials";
-@import "company";
-@import "team";
-@import "teaser";
