--- a/scss/_main-menu.scss
+++ b/scss/_main-menu.scss
@@ -1,50 +1,178 @@
 @charset "UTF-8";
 
-.main-menu {
-    background: {
-        color: rgba($bgColorDark, 1);
+.main-menu-wrapper {
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    background-color: $bgColorDark;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: $mobileMenuHeight;
+    top: 0;
+    left: 0;
+    right: 0;
+    .request-mobile {
+        @include breakpoint(medium down) {
+            display: block;
+        }
+        display: none;
+    }
+    .request-desktop {
+        @include breakpoint(medium down) {
+            display: none;
+        }
+        display: block;
     }
     @include breakpoint(large) {
-        background: {
-            color: rgba($bgColorDark, 0.5);
+        height: $menuHeight
+    }
+    .login-desktop {
+        display: none;
+        @include breakpoint (medium) {
+            display: block;
         }
     }
-    z-index: 1000;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    ul {
-        display: inline-flex;
-        list-style: none;
-        padding: {
-            top: rem-calc(25);
-            right: rem-calc(25);
-            bottom: rem-calc(25);
-            left: rem-calc(25);
+    .logo {
+        transform: translateY(3px);
+        border: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 75px;
+        margin-right: auto !important;
+        @include breakpoint (medium) {
+            width: 150px;
         }
-        margin: 0;
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+    .burger {
+        padding: $spaceXSmall;
+        border-radius: $global-radius;
         @include breakpoint(large) {
-            margin: {
-                top: 0;
-                left: auto;
-                bottom: 0;
-                right: 0;
+            display: none;
+        }
+        &.active {
+            span {
+                &:nth-child(1) {
+                    top: 50%;
+                    transform: translateY(-50%) rotate(45deg);
+                }
+                &:nth-child(2) {
+                    opacity: 0;
+                }
+                &:nth-child(3) {
+                    bottom: 50%;
+                    transform: translateY(50%) rotate(-45deg);
+                }
             }
         }
-        li {
-            font: {
-                size: $fontSizeLarge;
+        .burger-inner {
+            position: relative;
+            width: 24px;
+            height: 20px;
+        }
+        span {
+            transition:
+                    transform $anchorTransitionTimeAndEasingOut,
+                    top $anchorTransitionTimeAndEasingOut,
+                    bottom $anchorTransitionTimeAndEasingOut,
+                    opacity $anchorTransitionTimeAndEasingOut;
+            left: 0;
+            right: 0;
+            display: block;
+            position: absolute;
+            height: 4px;
+            background: $fontLight;
+            border-radius: $global-radius;
+            &:nth-child(1) {
+                top: 0;
             }
+            &:nth-child(2) {
+                top: 50%;
+                transform: translateY(-50%);
+            }
+            &:nth-child(3) {
+                bottom: 0;
+            }
+        }
+    }
+    .inner-wrapper {
+        max-width: unset;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        > * {
             margin: {
-                right: 15px;
+                right: $spaceXSmall;
+            }
+            @include breakpoint(large) {
+                margin: {
+                    right: $spaceSmall;
+                }
             }
             &:last-child {
                 margin: {
                     right: 0;
                 }
+            }
+        }
+    }
+    .main-menu {
+        @include reset-list;
+        @include breakpoint(medium down) {
+            width: 100%;
+            background-color: $bgColorDark;
+            padding: $spaceSmall;
+            left: 0;
+            top: $mobileMenuHeight;
+            position: absolute;
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            flex: {
+                direction: column;
+            }
+            transition: transform $anchorTransitionTimeAndEasingOut;
+            transform: translateX(-100%);
+            &.active {
+                transform: translateX(0);
+            }
+            li {
+                margin: {
+                    right: 0;
+                    bottom: $spaceXSmall;
+                }
+                font: {
+                    size: $fontSizeLarge;
+                }
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        li {
+            @include breakpoint(large) {
+                margin: {
+                    right: $spaceSmall;
+                }
+            }
+            a {
+                color: $fontLight;
+                border: 0;
+            }
+        }
+        .login-mobile {
+            display: block;
+            @include breakpoint (medium) {
+                display: none;
             }
         }
     }
