--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -33,10 +33,13 @@ $starColor: #fff;
 $starLineColor: rgba(#fff, 0.25);
 
 $breakpoints: (
-    small: 0px,
+    small: 0,
     medium: 468px,
-    large: 769px
+    large: 920px
 );
 
 $anchorTransitionTimeAndEasingIn: 0.4s ease-out;
 $anchorTransitionTimeAndEasingOut: 0.2s ease-out;
+
+$mobileMenuHeight: 65px;
+$menuHeight: 85px;
